--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
 </head>
 <body>
     
+    <div id="calculatorFrame">
+
+        <!-- Display Area -->
+        <div class="display">
+            <div class="displayContent">12345</div>
+        </div>
+
+        <!-- Clear and All Clear -->
+        <div class="clearContainer">
+            <div class="allClear clearBtn">AC</div>
+            <div class="clear clearBtn">C</div>
+        </div>
+
+        <!-- Buttons -->
+        <div class="buttonsContainer">
+            <div class="calcBtn numBtn">7</div>
+            <div class="calcBtn numBtn">8</div>
+            <div class="calcBtn numBtn">9</div>
+            <div class="calcBtn operator">*</div>
+            <div class="calcBtn numBtn">4</div>
+            <div class="calcBtn numBtn">5</div>
+            <div class="calcBtn numBtn">6</div>
+            <div class="calcBtn operator">÷</div>
+            <div class="calcBtn numBtn">1</div>
+            <div class="calcBtn numBtn">2</div>
+            <div class="calcBtn numBtn">3</div>
+            <div class="calcBtn operator">-</div>
+            <div class="calcBtn numBtn">0</div>
+            <div class="calcBtn operator">.</div>
+            <div class="calcBtn operator">=</div>
+            <div class="calcBtn operator">+</div>
+        </div>
+    </div>
+
     <script src="calculator.js"></script>
 </body>
 </html>
