Add button events

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- Display Area -->
         <div class="display">
-            <div class="displayContent">12345</div>
+            <div class="displayContent"></div>
         </div>
 
         <!-- Clear and All Clear -->
