--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="calcBtn operator">-</div>
             <div class="calcBtn numBtn">0</div>
             <div class="calcBtn operator">.</div>
-            <div class="calcBtn operator">=</div>
+            <div id='equal' class="calcBtn operator">=</div>
             <div class="calcBtn operator">+</div>
         </div>
     </div>
