Added decimal and clear functionality

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <div class="calcBtn numBtn">3</div>
             <div class="calcBtn operator">-</div>
             <div class="calcBtn numBtn">0</div>
-            <div class="calcBtn operator">.</div>
-            <div id='equal' class="calcBtn operator">=</div>
+            <div class="calcBtn decimal">.</div>
+            <div id='equal' class="calcBtn">=</div>
             <div class="calcBtn operator">+</div>
         </div>
     </div>
